--- a/StaticMemTemplate/CMakeLists.txt
+++ b/StaticMemTemplate/CMakeLists.txt
@@ -7,3 +7,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_executable(test_basic ./test/test_basic.cpp)
 add_executable(test_blas ./test/test_blas.cpp)
 add_executable(test_eigen ./test/test_eigen.cpp)
+add_executable(test_kde ./test/test_kde.cpp)
