fix warning messages

--- a/StaticMemTemplate/CMakeLists.txt
+++ b/StaticMemTemplate/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.12...3.15 FATAL_ERROR)
-project(StaticMemTemplate LANGUAGES CXX C)
-add_compile_options(-std=c++11)
+project(StaticMemTemplate LANGUAGES CXX)
+add_compile_options(-std=c++14)
+
+# open all compiler warnings
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -13,3 +16,12 @@ add_executable(test_matrixdet ./test/test_matrixdet.cpp)
 find_package (Eigen3 3.3 REQUIRED NO_MODULE)
 add_executable(test_kdemv ./test/test_kdemv.cpp)
 target_link_libraries (test_kdemv Eigen3::Eigen)
+
+enable_testing()
+add_test(NAME test_basic COMMAND ./test_basic)
+add_test(NAME test_blas COMMAND ./test_blas)
+add_test(NAME test_eigen COMMAND ./test_eigen)
+add_test(NAME test_kde COMMAND ./test_kde)
+add_test(NAME test_matrixdet COMMAND ./test_matrixdet)
+add_test(NAME test_kdemv COMMAND ./test_kdemv)
+
